--- a/QuequeTheme/Views/Admin/OrderReceiving.cshtml
+++ b/QuequeTheme/Views/Admin/OrderReceiving.cshtml
@@ -433,20 +433,21 @@
         <div class="content-wrapper">
             <section class="content-header">
                 <h1>
-                    已收货订单
+                    已收货
                     <small> @Model.UserDto.NickName</small>
                 </h1>
             </section>
             <div class="col-md-12" style="margin-top:16px">
-                <div class="box box-default">
+                <div class="box box-default" style="height:590px">
 
                     <div class="box-body">
                         <div class="alert alert-success alert-dismissable">
                             <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-                            <h4><i class="icon fa fa-check"></i> 通知! <span style="font-size:13px">以下是已经确认收货的订单！</span></h4>
-                            <form class="form-inline  ">
-                                <input class="form-control  " type="search" placeholder="Search" aria-label="Search">
-                                <button class="btn btn-warning  " type="button" onclick="Search()">搜索</button>
+                            <h4><i class="icon fa fa-warning"></i>通知! <span style="font-size:13px">以下是已经收货的信息！</span></h4>
+
+                            <form class="form-inline  " method="get">
+                                <input class="form-control  " name="name" type="search" placeholder="订单名称" aria-label="Search">
+                                <button class="btn btn-info  " type="submit">搜索</button>
                             </form>
                         </div>
                         <div class="table-responsive ">
@@ -457,6 +458,7 @@
                                         <th class="text-center">单价</th>
                                         <th class="text-center">数量</th>
                                         <th class="text-center">小计</th>
+
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -466,11 +468,11 @@
                                             <td class="col-md-6">
                                                 <div class="col-md-12">
                                                     <div class="col-md-3">
-                                                        <a href="/Home/Detail?productId=@item.ProductId">   <img src="@item.Pictrue" alt="@item.Title" class="img-responsive " /></a>
+                                                        <a href="javascript:ToDetail(@item.ProductId)">   <img src="@item.Pictrue" alt="@item.Title" class="img-responsive " /></a>
 
                                                     </div>
                                                     <div class="col-md-9 text-left">
-                                                        <p><a href="/Home/Detail?productId=@item.ProductId"><strong style="font-size:15px"> @item.Title</strong></a></p>
+                                                        <p><a href="javascript:ToDetail(@item.ProductId)"><strong style="font-size:15px"> @item.Title</strong></a></p>
                                                         <p>
                                                             <strong style="color:#808080;font-size:14px">
                                                                 @if (!string.IsNullOrEmpty(item.ShortDescribe))
@@ -501,6 +503,7 @@
                                             <td><p style="font-size:30px;margin-top:40px">@item.Count</p></td>
                                             <td><p style="font-size:30px;color:crimson;margin-top:40px">￥<span id="TotalPrice">@(item.Count*item.Price)</span></p></td>
 
+                                    
 
                                         </tr>
 
@@ -520,17 +523,17 @@
                                 else
                                 {
                                     <li class="page-item  ">
-                                        <a class="page-link" asp-action="OrderReceiving" asp-route-index="@(ViewBag.Index-1)">上一页</a>
+                                        <a class="page-link" asp-action="OrderReceiving" asp-route-name="@ViewBag.Name" asp-route-index="@(ViewBag.Index-1)">上一页</a>
                                     </li>
                                 }
                                 @for (int i = 1; i <= Model.PageListStatus3.TotalPages; i++)
                                 {
                                     if (i == ViewBag.Index)
                                     {
-                                        <li class="page-item active"><a class="page-link" asp-action="OrderReceiving" asp-route-index="@i">@i</a></li>
+                                        <li class="page-item active"><a class="page-link" asp-action="OrderReceiving" asp-route-name="@ViewBag.Name" asp-route-index="@i">@i</a></li>
                                         continue;
                                     }
-                                    <li class="page-item"><a class="page-link" asp-action="OrderReceiving" asp-route-index="@i">@i</a></li>
+                                    <li class="page-item"><a class="page-link" asp-action="OrderReceiving" asp-route-name="@ViewBag.Name" asp-route-index="@i">@i</a></li>
 
                                 }
                                 @if (ViewBag.Index == Model.PageListStatus3.TotalPages)
@@ -542,7 +545,7 @@
                                 else
                                 {
                                     <li class="page-item  ">
-                                        <a class="page-link" asp-action="OrderReceiving" asp-route-index="@(ViewBag.Index+1)">下一页</a>
+                                        <a class="page-link" asp-action="OrderReceiving" asp-route-name="@ViewBag.Name" asp-route-index="@(ViewBag.Index+1)">下一页</a>
                                     </li>
                                 }
 
@@ -552,29 +555,27 @@
                 </div><!-- /.box -->
             </div>
         </div><!-- /.content-wrapper -->
-
-    </div><!-- /.content-wrapper -->
-    <footer class="main-footer">
-        <div class="pull-right hidden-xs">
-            <b>Version</b> 1.0
-        </div>
-        <strong>Copyright &copy; 2020 <a href="http://beian.miit.gov.cn">晋ICP备20002472号-1</a>.</strong> 缺缺作品
-    </footer>
-
-
-    <!-- 设置，修改demo.js -->
-    <aside class="control-sidebar control-sidebar-dark">
-        <!-- Create the tabs -->
-        <ul class="nav nav-tabs nav-justified control-sidebar-tabs">
-        </ul>
-        <!-- Tab panes -->
-        <div class="tab-content">
-            <div class="tab-pane" id="control-sidebar-home-tab">
+        <footer class="main-footer">
+            <div class="pull-right hidden-xs">
+                <b>Version</b> 1.0
             </div>
-            <div class="tab-pane" id="control-sidebar-stats-tab">Stats Tab Content</div><!-- /.tab-pane -->
-        </div>
-    </aside>
-    <div class='control-sidebar-bg'></div>
+            <strong>Copyright &copy; 2020 <a href="http://beian.miit.gov.cn">晋ICP备20002472号-1</a>.</strong> 缺缺作品
+        </footer>
+
+
+        <!-- 设置，修改demo.js -->
+        <aside class="control-sidebar control-sidebar-dark">
+            <!-- Create the tabs -->
+            <ul class="nav nav-tabs nav-justified control-sidebar-tabs">
+            </ul>
+            <!-- Tab panes -->
+            <div class="tab-content">
+                <div class="tab-pane" id="control-sidebar-home-tab">
+                </div>
+                <div class="tab-pane" id="control-sidebar-stats-tab">Stats Tab Content</div><!-- /.tab-pane -->
+            </div>
+        </aside>
+        <div class='control-sidebar-bg'></div>
     </div><!-- ./wrapper -->
     <!-- jQuery 2.1.4 -->
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
@@ -595,7 +596,7 @@
     <script src="~/js/baseurl.js"></script>
 
     <script src="~/js/admin.js"></script>
+    <script src="~/js/adminUserOrders.js"></script>
 </body>
 
 </html>
-
