--- a/QuequeTheme/Views/Admin/RoleMagger.cshtml
+++ b/QuequeTheme/Views/Admin/RoleMagger.cshtml
@@ -194,46 +194,27 @@
             <!-- 页面标题 -->
             <section class="content-header">
                 <h1>
-                    商品编辑 <small> @Model.UserDto.NickName</small>
+                    角色管理 <small> @Model.UserDto.NickName</small>
                 </h1>
             </section>
-            <p style="display:none" id="ProductId">@Model.Product.Id</p>
             <div class="row " style="margin-top:16px; ">
                 <div class="box box-primary col-lg-7 ">
 
-                    <form id="FormProductDataEdit" role="form" enctype="multipart/form-data" class=" col-lg-4">
+                    <form class=" col-lg-4">
                         <div class="box-body">
-
                             <div class="form-group">
-                                <label for="exampleInputEmail1">标题</label>
-                                <input type="text" id="Title" class="form-control" value="@Model.Product.Title" name="Title" placeholder="请输入商品标题">
+                                <div class="form-inline">
+                                    <label>用户：</label>
+                                    <select class="form-control" id="UserId" >
+                                    </select>
+                                    <label>角色：</label>
+                                    <select class="form-control" id="RoleId"  >
+                                    </select>
+                                </div>
                             </div>
-
+                             
                             <div class="form-group">
-                                <label for="exampleInputPassword1">价格</label>
-                                <input type="number" id="Price" class="form-control" value="@Model.Product.Price" name="Price" placeholder="请输入价格">
-                            </div>
-
-                            <div class="form-group">
-                                <label for="exampleInputPassword1">库存量</label>
-                                <input type="number" class="form-control" id="Stock" value="@Model.Product.Stock" name="Stock" placeholder="请输入库存量">
-                            </div>
-
-                            <div class="form-group">
-                                <label for="exampleInputPassword1">描述 </label>
-                                <input class="form-control" id="ShortDescribe" value="@Model.Product.ShortDescribe" name="ShortDescribe" rows="3" placeholder="请输入简短描述" />
-                            </div>
-                            <div class="form-group">
-                                <label for="exampleInputFile">上传图片</label>
-                                <input type="file" name="Pictrue" id="Pictrue" onchange="ProductImgChange()">
-                                <p class="help-block">
-
-                                    <img id="ProductImg" style="height:220px" src="@Model.Product.Pictrue" class="img-responsive" />
-
-                                </p>
-                            </div>
-                            <div class="form-group">
-                                <button type="button" onclick="Edit()" class="btn btn-primary">编辑</button>
+                                <button type="button" onclick="UserToRole()" class="btn btn-primary">分配角色</button>
                             </div>
                         </div><!-- /.box-body -->
 
@@ -275,14 +256,15 @@
     <script src="~/AdminLTE-2.1.1/dist/js/app.min.js" type="text/javascript"></script>
     <!-- AdminLTE for demo purposes -->
     <script src="~/AdminLTE-2.1.1/dist/js/demo.js" type="text/javascript"></script>
-    <script src="~/canvas-nest/canvas-nest.js" color="49,48,76" opacity='0.9' zIndex="1" count="16"></script>
+    <script src="~/canvas-nest/canvas-nest.js" color="49,48,76" opacity='0.9' zIndex="1" count="9"></script>
 
     <script src="~/lib/jquery.cookie.js"></script>
     <script src="~/layer/layer.js"></script>
     <script src="~/js/baseurl.js"></script>
 
     <script src="~/js/admin.js"></script>
-    <script src="~/js/adminProductCreate.js"></script>
+
+    <script src="~/js/adminUserMagger.js"></script>
 
 </body>
 
